feat: init gateway service